overflow fixed

--- a/index.css
+++ b/index.css
@@ -32,6 +32,7 @@ body, html{
     flex-direction: row;
     height: 100%;
     width: 100%;
+    overflow: auto;
 }
 
 .left{
